<!--
  ~
  ~ *  Copyright (C) 2018, University of the Basque Country (UPV/EHU)
  ~ *
  ~ * Contact for licensing options: <licensing-mcpttclient(at)mcopenplatform(dot)com>
  ~ *
  ~ * This file is part of MCOP MCPTT Client
  ~ *
  ~ * This is free software: you can redistribute it and/or modify it under the terms of
  ~ * the GNU General Public License as published by the Free Software Foundation, either version 3
  ~ * of the License, or (at your option) any later version.
  ~ *
  ~ * This is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ * See the GNU General Public License for more details.
  ~ *
  ~ * You should have received a copy of the GNU General Public License along
  ~ * with this program; if not, write to the Free Software Foundation, Inc.,
  ~ * 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  -->

<resources>
    <string name="app_name">MCOPSDK</string>
    <string name="title_activity_main">MCPTT APP</string>
    <string name="Error_in_authetication">Authetication error</string>

    <!--INIT-->
    <string name="Not_be_connected_with_the_service">Not connected to Service: </string>
    <string name="Error_when_accessing_service">Error accessing Service: </string>
    <!--END-->

    <string name="Cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="create_an_action_item">Create an Action Item</string>
    <string name="title_activity_maps_acitivity">MapsAcitivity</string>

    <string name="release_token">RELEASE TOKEN</string>
    <string name="logged_in_as">USER</string>
    <string name="none">NONE</string>
    <string name="users">CONTACTS</string>
    <string name="request_token">REQUEST TOKEN</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="register">Register</string>
    <string name="logging">Logging</string>
    <string name="location">Location</string>
    <string name="message">Message</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_message_select">MessageSelect</string>

</resources>



