<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/message"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/message"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuLocation"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/location"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuLog"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/logging"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuRegister"
        android:title="@string/register" />
    <!--<item android:title="@string/logging"-->
        <!--android:id="@+id/menuLog" />-->
    <!--<item android:title="@string/location"-->
        <!--android:id="@+id/menuLocation" />-->
</menu>