<!--
  ~
  ~ *  Copyright (C) 2018, University of the Basque Country (UPV/EHU)
  ~ *
  ~ * Contact for licensing options: <licensing-mcpttclient(at)mcopenplatform(dot)com>
  ~ *
  ~ * This file is part of MCOP MCPTT Client
  ~ *
  ~ * This is free software: you can redistribute it and/or modify it under the terms of
  ~ * the GNU General Public License as published by the Free Software Foundation, either version 3
  ~ * of the License, or (at your option) any later version.
  ~ *
  ~ * This is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ * See the GNU General Public License for more details.
  ~ *
  ~ * You should have received a copy of the GNU General Public License along
  ~ * with this program; if not, write to the Free Software Foundation, Inc.,
  ~ * 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.mcopenplatform.muoapi.mcopsdk.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/simplexTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/logged_in_as"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/simpleTextView"
        app:layout_constraintEnd_toEndOf="@+id/simpleyTextView"
        app:layout_constraintStart_toStartOf="@+id/simpleyTextView"
        app:layout_constraintTop_toTopOf="@+id/simpleTextView" />

    <Button
        android:id="@+id/mainActivity_Button_make_call"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/make_call_press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivity_Button_Speaker" />

    <Button
        android:id="@+id/mainActivity_Button_Hang_up_call"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:padding="100dp"
        android:background="@drawable/hang_press"
        app:layout_constraintBottom_toBottomOf="@+id/mainActivity_Button_Speaker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainActivity_Button_Speaker" />

    <Button
        android:id="@+id/mainActivity_Button_token"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/token_b"
        android:text="TOKEN"
        app:layout_constraintBottom_toBottomOf="@+id/mainActivity_Button_Hang_up_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainActivity_Button_Hang_up_call" />

    <Button
        android:id="@+id/mainActivity_Button_Speaker"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/speaker_o"
        app:layout_constraintBottom_toTopOf="@+id/mainActivity_Button_make_call"
        app:layout_constraintEnd_toStartOf="@+id/mainActivity_Button_Hang_up_call"
        app:layout_constraintStart_toEndOf="@+id/mainActivity_Button_token"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />


    <TextView
        android:id="@+id/simpleyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/users"
        android:clickable="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinner1"
        app:layout_constraintEnd_toStartOf="@+id/spinner1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner1" />

    <TextView
        android:id="@+id/simpleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/none"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinner1"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="260dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
